fix vertical align of a select

--- a/djangocms_admin_style/sass/components/_tables.scss
+++ b/djangocms_admin_style/sass/components/_tables.scss
@@ -202,6 +202,7 @@
         .related-widget-wrapper {
             select {
                 float: none;
+                vertical-align: top;
                 width: auto !important;
             }
         }
